@@ -116,14 +116,14 @@ import static org.junit.jupiter.params.provider.Arguments.arguments;
 public class ReflectiveDomainMirrorFactoryTest {
 
     @BeforeAll
-    public static void init(){
+    public static void init() {
         ReflectiveDomainMirrorFactory factory = new ReflectiveDomainMirrorFactory("tests");
         Domain.initialize(factory);
     }
 
     @ParameterizedTest
     @MethodSource(value = "identityValueTypes")
-    public void testIdMirror(Class<?> identityClass, Class<?> valueTypeClass){
+    public void testIdMirror(Class<?> identityClass, Class<?> valueTypeClass) {
         Optional<IdentityMirror> identity = Domain
             .typeMirror(identityClass.getName());
         assertThat(identity).isPresent();
@@ -142,7 +142,7 @@ public class ReflectiveDomainMirrorFactoryTest {
 
     @ParameterizedTest
     @MethodSource(value = "enumTypes")
-    public void testEnumMirror(Class<? extends Enum<?>> enumClass){
+    public void testEnumMirror(Class<? extends Enum<?>> enumClass) {
         Optional<EnumMirror> enumMirrorOptional = Domain.typeMirror(enumClass.getName());
         assertThat(enumMirrorOptional).isPresent();
         var enumMirror = enumMirrorOptional.get();
@@ -152,7 +152,8 @@ public class ReflectiveDomainMirrorFactoryTest {
             .stream()
             .map(om -> om.getValue())
             .collect(Collectors.toList())
-        ).containsExactlyInAnyOrderElementsOf(Arrays.stream(enumClass.getEnumConstants()).map(c -> c.name()).collect(Collectors.toList()));
+        ).containsExactlyInAnyOrderElementsOf(
+            Arrays.stream(enumClass.getEnumConstants()).map(c -> c.name()).collect(Collectors.toList()));
     }
 
     private static Stream<Arguments> enumTypes() {
@@ -163,12 +164,12 @@ public class ReflectiveDomainMirrorFactoryTest {
     }
 
     @Test
-    public void testHiddenField(){
+    public void testHiddenField() {
         var mirror = Domain.typeMirror(SubEntityHiding.class.getName()).orElseThrow();
 
         var fieldMirrors = mirror.getAllFields()
             .stream()
-            .filter(f->f.getName().equals("hiddenField"))
+            .filter(f -> f.getName().equals("hiddenField"))
             .toList();
         assertThat(fieldMirrors).hasSize(2);
         var hidden = fieldMirrors
@@ -179,12 +180,12 @@ public class ReflectiveDomainMirrorFactoryTest {
     }
 
     @Test
-    public void testOverriddenMethods(){
+    public void testOverriddenMethods() {
         var mirror = Domain.typeMirror(SubEntityHiding.class.getName()).orElseThrow();
 
         var overridden = mirror.getMethods()
             .stream()
-            .filter(m->m.getName().equals("showTestOverridden"))
+            .filter(m -> m.getName().equals("showTestOverridden"))
             .toList();
         assertThat(overridden).hasSize(2);
         var overriddenConcrete = overridden
@@ -203,7 +204,7 @@ public class ReflectiveDomainMirrorFactoryTest {
 
         var validate = mirror.getMethods()
             .stream()
-            .filter(m->m.getName().equals("validate"))
+            .filter(m -> m.getName().equals("validate"))
             .toList();
         assertThat(validate).hasSize(2);
         var overriddenValidate = validate
@@ -222,7 +223,7 @@ public class ReflectiveDomainMirrorFactoryTest {
 
         var notOverridden = mirror.getMethods()
             .stream()
-            .filter(m->m.getName().equals("showTestNotOverridden"))
+            .filter(m -> m.getName().equals("showTestNotOverridden"))
             .toList();
         assertThat(notOverridden).hasSize(1);
         assertThat(notOverridden.get(0).isOverridden()).isFalse();
@@ -230,7 +231,7 @@ public class ReflectiveDomainMirrorFactoryTest {
     }
 
     @Test
-    public void testSimpleVo(){
+    public void testSimpleVo() {
         assertDomainObject(
             SimpleVo.class.getName(),
             ValueObjectBase.class.getName(),
@@ -259,7 +260,7 @@ public class ReflectiveDomainMirrorFactoryTest {
     }
 
     @Test
-    public void testComplexVo(){
+    public void testComplexVo() {
         assertDomainObject(
             ComplexVo.class.getName(),
             ValueObjectBase.class.getName(),
@@ -302,7 +303,7 @@ public class ReflectiveDomainMirrorFactoryTest {
     }
 
     @Test
-    public void testSimpleVoOneToMany2(){
+    public void testSimpleVoOneToMany2() {
         assertDomainObject(
             SimpleVoOneToMany2.class.getName(),
             ValueObjectBase.class.getName(),
@@ -345,128 +346,158 @@ public class ReflectiveDomainMirrorFactoryTest {
     }
 
     @Test
-    public void testTestVo2(){
+    public void testTestVo2() {
         assertDomainObject(
             TestVo2.class.getName(),
             Object.class.getName(),
             null,
             List.of(
                 new ExpectedProperty(
-                    String.class, "stringSized", TestVo2.class.getName(),false, false, true, false, null,
-                    List.of(new ExpectedAssertion(AssertionType.hasLength, "0", "5", "{jakarta.validation.constraints.Size.message}")),
+                    String.class, "stringSized", TestVo2.class.getName(), false, false, true, false, null,
+                    List.of(new ExpectedAssertion(AssertionType.hasLength, "0", "5",
+                        "{jakarta.validation.constraints.Size.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    String.class, "optionalStringSized", TestVo2.class.getName(),false, true, true, false, Optional.class.getName(),
-                    List.of(new ExpectedAssertion(AssertionType.hasLength, "0", "5", "{jakarta.validation.constraints.Size.message}")),
+                    String.class, "optionalStringSized", TestVo2.class.getName(), false, true, true, false,
+                    Optional.class.getName(),
+                    List.of(new ExpectedAssertion(AssertionType.hasLength, "0", "5",
+                        "{jakarta.validation.constraints.Size.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    String.class, "stringNotNull", TestVo2.class.getName(),false, false, true, false, null,
-                    List.of(new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}")),
+                    String.class, "stringNotNull", TestVo2.class.getName(), false, false, true, false, null,
+                    List.of(new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                        "{jakarta.validation.constraints.NotNull.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    String.class, "stringNotEmpty", TestVo2.class.getName(),false, false, true, false, null,
-                    List.of(new ExpectedAssertion(AssertionType.isNotEmpty, null, null, "{jakarta.validation.constraints.NotEmpty.message}")),
+                    String.class, "stringNotEmpty", TestVo2.class.getName(), false, false, true, false, null,
+                    List.of(new ExpectedAssertion(AssertionType.isNotEmpty, null, null,
+                        "{jakarta.validation.constraints.NotEmpty.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    String.class, "stringNotBlank", TestVo2.class.getName(),false, false, true, false, null,
-                    List.of(new ExpectedAssertion(AssertionType.isNotBlank, null, null, "{jakarta.validation.constraints.NotBlank.message}")),
+                    String.class, "stringNotBlank", TestVo2.class.getName(), false, false, true, false, null,
+                    List.of(new ExpectedAssertion(AssertionType.isNotBlank, null, null,
+                        "{jakarta.validation.constraints.NotBlank.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    String.class, "stringPattern", TestVo2.class.getName(),false, false, true, false, null,
-                    List.of(new ExpectedAssertion(AssertionType.regEx, "[0-9]", null, "{jakarta.validation.constraints.Pattern.message}")),
+                    String.class, "stringPattern", TestVo2.class.getName(), false, false, true, false, null,
+                    List.of(new ExpectedAssertion(AssertionType.regEx, "[0-9]", null,
+                        "{jakarta.validation.constraints.Pattern.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    String.class, "stringEmail", TestVo2.class.getName(),false, false, true, false, null,
-                    List.of(new ExpectedAssertion(AssertionType.isValidEmail, null, null, "{jakarta.validation.constraints.Email.message}")),
+                    String.class, "stringEmail", TestVo2.class.getName(), false, false, true, false, null,
+                    List.of(new ExpectedAssertion(AssertionType.isValidEmail, null, null,
+                        "{jakarta.validation.constraints.Email.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    String.class, "optionalStringEmail", TestVo2.class.getName(),false, true, true, false, Optional.class.getName(),
-                    List.of(new ExpectedAssertion(AssertionType.isValidEmail, null, null, "{jakarta.validation.constraints.Email.message}")),
+                    String.class, "optionalStringEmail", TestVo2.class.getName(), false, true, true, false,
+                    Optional.class.getName(),
+                    List.of(new ExpectedAssertion(AssertionType.isValidEmail, null, null,
+                        "{jakarta.validation.constraints.Email.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    String.class, "optionalStringPattern", TestVo2.class.getName(),false, true, true, false, Optional.class.getName(),
-                    List.of(new ExpectedAssertion(AssertionType.regEx, "[0-9]", null, "{jakarta.validation.constraints.Pattern.message}")),
+                    String.class, "optionalStringPattern", TestVo2.class.getName(), false, true, true, false,
+                    Optional.class.getName(),
+                    List.of(new ExpectedAssertion(AssertionType.regEx, "[0-9]", null,
+                        "{jakarta.validation.constraints.Pattern.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    BigDecimal.class, "bigDecimalMin", TestVo2.class.getName(),false, false, true, false, null,
-                    List.of(new ExpectedAssertion(AssertionType.isGreaterOrEqualNonDecimal, "5", null, "{jakarta.validation.constraints.Min.message}")),
+                    BigDecimal.class, "bigDecimalMin", TestVo2.class.getName(), false, false, true, false, null,
+                    List.of(new ExpectedAssertion(AssertionType.isGreaterOrEqualNonDecimal, "5", null,
+                        "{jakarta.validation.constraints.Min.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    int.class, "anIntMin", TestVo2.class.getName(),false, false, true, false, null,
-                    List.of(new ExpectedAssertion(AssertionType.isGreaterOrEqualNonDecimal, "5", null, "{jakarta.validation.constraints.Min.message}")),
+                    int.class, "anIntMin", TestVo2.class.getName(), false, false, true, false, null,
+                    List.of(new ExpectedAssertion(AssertionType.isGreaterOrEqualNonDecimal, "5", null,
+                        "{jakarta.validation.constraints.Min.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    BigDecimal.class, "optionalBigDecimalMin", TestVo2.class.getName(),false, true, true, false, Optional.class.getName(),
-                    List.of(new ExpectedAssertion(AssertionType.isGreaterOrEqualNonDecimal, "5", null, "{jakarta.validation.constraints.Min.message}")),
+                    BigDecimal.class, "optionalBigDecimalMin", TestVo2.class.getName(), false, true, true, false,
+                    Optional.class.getName(),
+                    List.of(new ExpectedAssertion(AssertionType.isGreaterOrEqualNonDecimal, "5", null,
+                        "{jakarta.validation.constraints.Min.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    BigDecimal.class, "bigDecimalDecimalMin", TestVo2.class.getName(),false, false, true, false,null,
-                    List.of(new ExpectedAssertion(AssertionType.isGreaterOrEqual, "5.0", null, "{jakarta.validation.constraints.DecimalMin.message}")),
+                    BigDecimal.class, "bigDecimalDecimalMin", TestVo2.class.getName(), false, false, true, false, null,
+                    List.of(new ExpectedAssertion(AssertionType.isGreaterOrEqual, "5.0", null,
+                        "{jakarta.validation.constraints.DecimalMin.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    int.class, "anIntDecimalMin", TestVo2.class.getName(),false, false, true, false,null,
-                    List.of(new ExpectedAssertion(AssertionType.isGreaterOrEqual, "5.0", null, "{jakarta.validation.constraints.DecimalMin.message}")),
+                    int.class, "anIntDecimalMin", TestVo2.class.getName(), false, false, true, false, null,
+                    List.of(new ExpectedAssertion(AssertionType.isGreaterOrEqual, "5.0", null,
+                        "{jakarta.validation.constraints.DecimalMin.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    BigDecimal.class, "optionalBigDecimalDecimalMin", TestVo2.class.getName(),false, true, true, false, Optional.class.getName(),
-                    List.of(new ExpectedAssertion(AssertionType.isGreaterOrEqual, "5.0", null, "{jakarta.validation.constraints.DecimalMin.message}")),
+                    BigDecimal.class, "optionalBigDecimalDecimalMin", TestVo2.class.getName(), false, true, true, false,
+                    Optional.class.getName(),
+                    List.of(new ExpectedAssertion(AssertionType.isGreaterOrEqual, "5.0", null,
+                        "{jakarta.validation.constraints.DecimalMin.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    BigDecimal.class, "bigDecimalDecimalMaxExclusive", TestVo2.class.getName(), false, false, true, false,null,
-                    List.of(new ExpectedAssertion(AssertionType.isLessThan, null, "5.0", "{jakarta.validation.constraints.DecimalMax.message}")),
+                    BigDecimal.class, "bigDecimalDecimalMaxExclusive", TestVo2.class.getName(), false, false, true,
+                    false, null,
+                    List.of(new ExpectedAssertion(AssertionType.isLessThan, null, "5.0",
+                        "{jakarta.validation.constraints.DecimalMax.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    int.class, "anIntDecimalMaxExclusive", TestVo2.class.getName(),false, false, true, false,null,
-                    List.of(new ExpectedAssertion(AssertionType.isLessThan, null, "5.0", "{jakarta.validation.constraints.DecimalMax.message}")),
+                    int.class, "anIntDecimalMaxExclusive", TestVo2.class.getName(), false, false, true, false, null,
+                    List.of(new ExpectedAssertion(AssertionType.isLessThan, null, "5.0",
+                        "{jakarta.validation.constraints.DecimalMax.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    BigDecimal.class,"optionalBigDecimalDecimalMaxExclusive", TestVo2.class.getName(),false, true, true, false,Optional.class.getName(),
-                    List.of(new ExpectedAssertion(AssertionType.isLessThan, null, "5.0", "{jakarta.validation.constraints.DecimalMax.message}")),
+                    BigDecimal.class, "optionalBigDecimalDecimalMaxExclusive", TestVo2.class.getName(), false, true,
+                    true, false, Optional.class.getName(),
+                    List.of(new ExpectedAssertion(AssertionType.isLessThan, null, "5.0",
+                        "{jakarta.validation.constraints.DecimalMax.message}")),
                     Collections.emptyList()
                 ),
                 new ExpectedProperty(
-                    double.class, "aDoubleDigits", TestVo2.class.getName(),false, false, true, false,null,
-                    List.of(new ExpectedAssertion(AssertionType.hasMaxDigits, "3", "2", "{jakarta.validation.constraints.Digits.message}")),
+                    double.class, "aDoubleDigits", TestVo2.class.getName(), false, false, true, false, null,
+                    List.of(new ExpectedAssertion(AssertionType.hasMaxDigits, "3", "2",
+                        "{jakarta.validation.constraints.Digits.message}")),
                     Collections.emptyList()
                 )
             ),
             List.of(
                 new ExpectedReference(
-                    TestId.class, "testId", TestVo2.class.getName(),false, false, false, true, false,null,
+                    TestId.class, "testId", TestVo2.class.getName(), false, false, false, true, false, null,
                     Collections.emptyList(),
                     Collections.emptyList()
                 ),
                 new ExpectedReference(
-                    TestId.class, "optionalTestId", TestVo2.class.getName(),false, false, true, true, false,Optional.class.getName(),
+                    TestId.class, "optionalTestId", TestVo2.class.getName(), false, false, true, true, false,
+                    Optional.class.getName(),
                     Collections.emptyList(),
                     Collections.emptyList()
                 ),
                 new ExpectedReference(
-                    TestIdInterface.class, "testIdInterface", TestVo2.class.getName(),false, false, false, true, false,null,
+                    TestIdInterface.class, "testIdInterface", TestVo2.class.getName(), false, false, false, true, false,
+                    null,
                     Collections.emptyList(),
                     Collections.emptyList()
                 ),
                 new ExpectedReference(
-                    TestId.class, "listTestIdSized", TestVo2.class.getName(),true, false, false, true, false, List.class.getName(),
+                    TestId.class, "listTestIdSized", TestVo2.class.getName(), true, false, false, true, false,
+                    List.class.getName(),
                     Collections.emptyList(),
-                    List.of(new ExpectedAssertion(AssertionType.hasSize, "0", "2", "{jakarta.validation.constraints.Size.message}"))
+                    List.of(new ExpectedAssertion(AssertionType.hasSize, "0", "2",
+                        "{jakarta.validation.constraints.Size.message}"))
                 )
             ),
             Collections.emptyList(),
@@ -478,7 +509,7 @@ public class ReflectiveDomainMirrorFactoryTest {
     }
 
     @Test
-    public void testValidatedAggregateRoot2(){
+    public void testValidatedAggregateRoot2() {
         assertDomainObject(
             ValidatedAggregateRoot2.class.getName(),
             AggregateRootBase.class.getName(),
@@ -494,8 +525,10 @@ public class ReflectiveDomainMirrorFactoryTest {
                     true,
                     null,
                     List.of(
-                        new ExpectedAssertion(AssertionType.hasLength, "0", "100", "{jakarta.validation.constraints.Size.message}"),
-                        new ExpectedAssertion(AssertionType.isNotEmpty, null, null, "{jakarta.validation.constraints.NotEmpty.message}")
+                        new ExpectedAssertion(AssertionType.hasLength, "0", "100",
+                            "{jakarta.validation.constraints.Size.message}"),
+                        new ExpectedAssertion(AssertionType.isNotEmpty, null, null,
+                            "{jakarta.validation.constraints.NotEmpty.message}")
                     ),
                     Collections.emptyList()
                 ),
@@ -509,7 +542,8 @@ public class ReflectiveDomainMirrorFactoryTest {
                     true,
                     Optional.class.getName(),
                     List.of(
-                        new ExpectedAssertion(AssertionType.hasLength, "0", "10", "{jakarta.validation.constraints.Size.message}")
+                        new ExpectedAssertion(AssertionType.hasLength, "0", "10",
+                            "{jakarta.validation.constraints.Size.message}")
                     ),
                     Collections.emptyList()
                 ),
@@ -536,7 +570,7 @@ public class ReflectiveDomainMirrorFactoryTest {
     }
 
     @Test
-    public void testBestellung(){
+    public void testBestellung() {
         assertDomainObject(
             BestellungBv3.class.getName(),
             AggregateRootBase.class.getName(),
@@ -552,9 +586,12 @@ public class ReflectiveDomainMirrorFactoryTest {
                     true,
                     null,
                     List.of(
-                        new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}"),
-                        new ExpectedAssertion(AssertionType.isLessOrEqual, null, "3.0", "{jakarta.validation.constraints.DecimalMax.message}"),
-                        new ExpectedAssertion(AssertionType.isGreaterOrEqual, "1.0", null, "{jakarta.validation.constraints.DecimalMin.message}")
+                        new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                            "{jakarta.validation.constraints.NotNull.message}"),
+                        new ExpectedAssertion(AssertionType.isLessOrEqual, null, "3.0",
+                            "{jakarta.validation.constraints.DecimalMax.message}"),
+                        new ExpectedAssertion(AssertionType.isGreaterOrEqual, "1.0", null,
+                            "{jakarta.validation.constraints.DecimalMin.message}")
                     ),
                     Collections.emptyList()
                 ),
@@ -583,7 +620,8 @@ public class ReflectiveDomainMirrorFactoryTest {
                     true,
                     null,
                     List.of(
-                        new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}")
+                        new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                            "{jakarta.validation.constraints.NotNull.message}")
                     ),
                     Collections.emptyList()
                 ),
@@ -598,8 +636,9 @@ public class ReflectiveDomainMirrorFactoryTest {
                     false,
                     null,
                     List.of(
-                        new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}")
-                        ),
+                        new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                            "{jakarta.validation.constraints.NotNull.message}")
+                    ),
                     Collections.emptyList()
                 ),
                 new ExpectedReference(
@@ -628,8 +667,9 @@ public class ReflectiveDomainMirrorFactoryTest {
                     true,
                     null,
                     List.of(
-                        new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}")
-                        ),
+                        new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                            "{jakarta.validation.constraints.NotNull.message}")
+                    ),
                     Collections.emptyList()
                 ),
                 new ExpectedReference(
@@ -644,9 +684,11 @@ public class ReflectiveDomainMirrorFactoryTest {
                     List.class.getName(),
                     Collections.emptyList(),
                     List.of(
-                        new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}"),
-                        new ExpectedAssertion(AssertionType.hasSize, "1", String.valueOf(Integer.MAX_VALUE), "{jakarta.validation.constraints.Size.message}")
-                        )
+                        new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                            "{jakarta.validation.constraints.NotNull.message}"),
+                        new ExpectedAssertion(AssertionType.hasSize, "1", String.valueOf(Integer.MAX_VALUE),
+                            "{jakarta.validation.constraints.Size.message}")
+                    )
 
                 ),
                 new ExpectedReference(
@@ -660,7 +702,8 @@ public class ReflectiveDomainMirrorFactoryTest {
                     true,
                     null,
                     List.of(
-                        new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}")
+                        new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                            "{jakarta.validation.constraints.NotNull.message}")
                     ),
                     Collections.emptyList()
                 ),
@@ -676,7 +719,8 @@ public class ReflectiveDomainMirrorFactoryTest {
                     List.class.getName(),
                     Collections.emptyList(),
                     List.of(
-                        new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}")
+                        new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                            "{jakarta.validation.constraints.NotNull.message}")
                     )
                 )
             ),
@@ -685,7 +729,7 @@ public class ReflectiveDomainMirrorFactoryTest {
             Collections.emptyList(),
             List.of(AggregateRootBase.class.getName(), EntityBase.class.getName(), Object.class.getName())
         );
-        var aggMirror = (AggregateRootMirror)Domain.typeMirror(BestellungBv3.class.getName()).get();
+        var aggMirror = (AggregateRootMirror) Domain.typeMirror(BestellungBv3.class.getName()).get();
         assertMethods(
             BestellungBv3.class,
             aggMirror.getMethods(),
@@ -699,7 +743,7 @@ public class ReflectiveDomainMirrorFactoryTest {
                         false,
                         Collections.emptyList(),
                         Collections.emptyList()
-                        ),
+                    ),
                     Collections.emptyList(), Collections.emptyList(), null
                 ),
                 new ExpectedMethod("starteLieferung", BestellungBv3.class.getName(), AccessLevel.PUBLIC,
@@ -719,7 +763,7 @@ public class ReflectiveDomainMirrorFactoryTest {
     }
 
     @Test
-    public void testAktionsCode(){
+    public void testAktionsCode() {
         assertDomainObject(
             AktionsCodeBv3.class.getName(),
             java.lang.Record.class.getName(),
@@ -735,8 +779,10 @@ public class ReflectiveDomainMirrorFactoryTest {
                     false,
                     null,
                     List.of(
-                        new ExpectedAssertion(AssertionType.isNotEmpty, null, null, "Ein Aktionscode darf nicht leer sein!"),
-                        new ExpectedAssertion(AssertionType.hasLength, "0", "15", "Ein Aktionscode darf aus maximal 15 Zeichen bestehen!")
+                        new ExpectedAssertion(AssertionType.isNotEmpty, null, null,
+                            "Ein Aktionscode darf nicht leer sein!"),
+                        new ExpectedAssertion(AssertionType.hasLength, "0", "15",
+                            "Ein Aktionscode darf aus maximal 15 Zeichen bestehen!")
                     ),
                     Collections.emptyList()
                 )
@@ -751,7 +797,7 @@ public class ReflectiveDomainMirrorFactoryTest {
     }
 
     @Test
-    public void testBestellStatus(){
+    public void testBestellStatus() {
         assertDomainObject(
             BestellStatusBv3.class.getName(),
             EntityBase.class.getName(),
@@ -767,7 +813,8 @@ public class ReflectiveDomainMirrorFactoryTest {
                     true,
                     null,
                     List.of(
-                        new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}")
+                        new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                            "{jakarta.validation.constraints.NotNull.message}")
                     ),
                     Collections.emptyList()
                 ),
@@ -796,7 +843,8 @@ public class ReflectiveDomainMirrorFactoryTest {
                     true,
                     null,
                     List.of(
-                        new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}")
+                        new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                            "{jakarta.validation.constraints.NotNull.message}")
                     ),
                     Collections.emptyList()
                 )
@@ -810,7 +858,7 @@ public class ReflectiveDomainMirrorFactoryTest {
     }
 
     @Test
-    public void testPreis(){
+    public void testPreis() {
         assertDomainObject(
             PreisBv3.class.getName(),
             java.lang.Record.class.getName(),
@@ -826,8 +874,10 @@ public class ReflectiveDomainMirrorFactoryTest {
                     false,
                     null,
                     List.of(
-                        new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}"),
-                        new ExpectedAssertion(AssertionType.isPositive, null, null, "{jakarta.validation.constraints.Positive.message}")
+                        new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                            "{jakarta.validation.constraints.NotNull.message}"),
+                        new ExpectedAssertion(AssertionType.isPositive, null, null,
+                            "{jakarta.validation.constraints.Positive.message}")
                     ),
                     Collections.emptyList()
                 )
@@ -844,7 +894,8 @@ public class ReflectiveDomainMirrorFactoryTest {
                     false,
                     null,
                     List.of(
-                        new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}")
+                        new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                            "{jakarta.validation.constraints.NotNull.message}")
                     ),
                     Collections.emptyList()
                 )
@@ -858,57 +909,61 @@ public class ReflectiveDomainMirrorFactoryTest {
     }
 
     @Test
-    public void testBenachrichtigungService(){
-        var serviceMirrorOpt = Domain.typeMirror(BenachrichtigungService.class.getName()).map(s -> (DomainServiceMirror)s);
+    public void testBenachrichtigungService() {
+        var serviceMirrorOpt = Domain.typeMirror(BenachrichtigungService.class.getName()).map(
+            s -> (DomainServiceMirror) s);
         assertThat(serviceMirrorOpt).isPresent();
         var serviceMirror = serviceMirrorOpt.get();
         assertThat(serviceMirror.getTypeName()).isEqualTo(BenachrichtigungService.class.getName());
         assertThat(serviceMirror.getInheritanceHierarchyTypeNames().get(0)).isEqualTo(Object.class.getName());
         assertThat(serviceMirror.getAllInterfaceTypeNames().get(0)).isEqualTo(DomainService.class.getName());
-        var auslieferungGestartetEvent = Domain.typeMirror(AuslieferungGestartet.class.getName()).map(e -> (DomainEventMirror)e);
+        var auslieferungGestartetEvent = Domain.typeMirror(AuslieferungGestartet.class.getName()).map(
+            e -> (DomainEventMirror) e);
         assertThat(auslieferungGestartetEvent).isPresent();
         assertThat(serviceMirror.listensTo(auslieferungGestartetEvent.get())).isTrue();
         assertMethods(BenachrichtigungService.class, serviceMirror.getMethods(),
-                List.of(
-                    new ExpectedMethod("benachrichtige", BenachrichtigungService.class.getName(), AccessLevel.PUBLIC,
-                        new ExpectedReturnType(
-                            void.class,
+            List.of(
+                new ExpectedMethod("benachrichtige", BenachrichtigungService.class.getName(), AccessLevel.PUBLIC,
+                    new ExpectedReturnType(
+                        void.class,
+                        null,
+                        false,
+                        false,
+                        false,
+                        Collections.emptyList(),
+                        Collections.emptyList()
+                    ),
+                    List.of(
+                        new ExpectedParameter(
+                            "arg0",
+                            AuslieferungGestartet.class,
                             null,
                             false,
                             false,
-                            false,
-                            Collections.emptyList(),
+                            List.of(new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                                "{jakarta.validation.constraints.NotNull.message}")),
                             Collections.emptyList()
-                        ),
-                        List.of(
-                            new ExpectedParameter(
-                                "arg0",
-                                AuslieferungGestartet.class,
-                                null,
-                                false,
-                                false,
-                                List.of(new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}")),
-                                Collections.emptyList()
 
-                            )
-                        ),
-                        Collections.emptyList(),
-                        AuslieferungGestartet.class.getName()
-                    )
+                        )
+                    ),
+                    Collections.emptyList(),
+                    AuslieferungGestartet.class.getName()
                 )
-            );
+            )
+        );
         assertThat(Domain.getBoundedContexts().get(0).getDomainServices().contains(serviceMirror));
     }
 
     @Test
-    public void testBestellungRepository(){
-        var repositoryMirrorOpt = Domain.typeMirror(BestellungRepository.class.getName()).map(r -> (RepositoryMirror)r);
+    public void testBestellungRepository() {
+        var repositoryMirrorOpt = Domain.typeMirror(BestellungRepository.class.getName()).map(
+            r -> (RepositoryMirror) r);
         assertThat(repositoryMirrorOpt).isPresent();
         var repMirror = repositoryMirrorOpt.get();
         assertThat(repMirror.getTypeName()).isEqualTo(BestellungRepository.class.getName());
         assertThat(repMirror.getInheritanceHierarchyTypeNames().get(0)).isEqualTo(Object.class.getName());
         assertThat(repMirror.getAllInterfaceTypeNames().get(0)).isEqualTo(Repository.class.getName());
-        var neueBestellungEventOpt = Domain.typeMirror(NeueBestellung.class.getName()).map(e -> (DomainEventMirror)e);
+        var neueBestellungEventOpt = Domain.typeMirror(NeueBestellung.class.getName()).map(e -> (DomainEventMirror) e);
         assertThat(neueBestellungEventOpt).isPresent();
         assertThat(repMirror.publishes(neueBestellungEventOpt.get())).isTrue();
         assertMethods(BestellungRepository.class, repMirror.getMethods(),
@@ -930,7 +985,8 @@ public class ReflectiveDomainMirrorFactoryTest {
                             null,
                             false,
                             false,
-                            List.of(new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}")),
+                            List.of(new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                                "{jakarta.validation.constraints.NotNull.message}")),
                             Collections.emptyList()
 
                         )
@@ -955,7 +1011,8 @@ public class ReflectiveDomainMirrorFactoryTest {
                             null,
                             false,
                             false,
-                            List.of(new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}")),
+                            List.of(new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                                "{jakarta.validation.constraints.NotNull.message}")),
                             Collections.emptyList()
 
                         )
@@ -980,7 +1037,8 @@ public class ReflectiveDomainMirrorFactoryTest {
                             null,
                             false,
                             false,
-                            List.of(new ExpectedAssertion(AssertionType.isNotNull, null, null, "{jakarta.validation.constraints.NotNull.message}")),
+                            List.of(new ExpectedAssertion(AssertionType.isNotNull, null, null,
+                                "{jakarta.validation.constraints.NotNull.message}")),
                             Collections.emptyList()
 
                         )
@@ -995,8 +1053,8 @@ public class ReflectiveDomainMirrorFactoryTest {
     }
 
     @Test
-    public void testStarteAuslieferungCommand(){
-        var commandMirrorOpt = Domain.typeMirror(StarteAuslieferung.class.getName()).map(r -> (DomainCommandMirror)r);
+    public void testStarteAuslieferungCommand() {
+        var commandMirrorOpt = Domain.typeMirror(StarteAuslieferung.class.getName()).map(r -> (DomainCommandMirror) r);
         assertThat(commandMirrorOpt).isPresent();
         var commandMirror = commandMirrorOpt.get();
         assertThat(commandMirror.getTypeName()).isEqualTo(StarteAuslieferung.class.getName());
@@ -1005,15 +1063,17 @@ public class ReflectiveDomainMirrorFactoryTest {
         assertThat(commandMirror.getValueReferences().stream()
             .filter(vr -> vr.getName().equals("bestellungId")).findFirst()).isPresent();
         assertThat(commandMirror.getDomainServiceTarget()).isPresent();
-        assertThat(commandMirror.getDomainServiceTarget().get().getTypeName()).isEqualTo(ZustellungsService.class.getName());
-        var zustellungServiceOpt = Domain.typeMirror(ZustellungsService.class.getName()).map(s ->(DomainServiceMirror)s);
+        assertThat(commandMirror.getDomainServiceTarget().get().getTypeName()).isEqualTo(
+            ZustellungsService.class.getName());
+        var zustellungServiceOpt = Domain.typeMirror(ZustellungsService.class.getName()).map(
+            s -> (DomainServiceMirror) s);
         assertThat(zustellungServiceOpt).isPresent();
         assertThat(zustellungServiceOpt.get().processes(commandMirror)).isTrue();
     }
 
     @Test
-    public void testAuslieferungGestartetEvent(){
-        var eventOpt = Domain.typeMirror(AuslieferungGestartet.class.getName()).map(e -> (DomainEventMirror)e);
+    public void testAuslieferungGestartetEvent() {
+        var eventOpt = Domain.typeMirror(AuslieferungGestartet.class.getName()).map(e -> (DomainEventMirror) e);
         assertThat(eventOpt).isPresent();
         var event = eventOpt.get();
         assertThat(event.getTypeName()).isEqualTo(AuslieferungGestartet.class.getName());
@@ -1027,18 +1087,20 @@ public class ReflectiveDomainMirrorFactoryTest {
         assertThat(best).isPresent();
         assertThat(best.get().isModifiable()).isFalse();
         assertThat(event.getListeningDomainServices().size()).isEqualTo(1);
-        assertThat(event.getListeningDomainServices().get(0).getTypeName()).isEqualTo(BenachrichtigungService.class.getName());
+        assertThat(event.getListeningDomainServices().get(0).getTypeName()).isEqualTo(
+            BenachrichtigungService.class.getName());
         assertThat(event.getPublishingAggregates().size()).isEqualTo(1);
         assertThat(event.getPublishingAggregates().get(0).getTypeName()).isEqualTo(BestellungBv3.class.getName());
     }
 
     @Test
-    public void testCarWithEngine(){
-        var carWithEngineOpt = Domain.typeMirror(CarWithEngine.class.getName()).map(r -> (AggregateRootMirror)r);
+    public void testCarWithEngine() {
+        var carWithEngineOpt = Domain.typeMirror(CarWithEngine.class.getName()).map(r -> (AggregateRootMirror) r);
         assertThat(carWithEngineOpt).isPresent();
         var carWithEngineMirror = carWithEngineOpt.get();
         assertThat(carWithEngineMirror.getTypeName()).isEqualTo(CarWithEngine.class.getName());
-        assertThat(carWithEngineMirror.getInheritanceHierarchyTypeNames().get(0)).isEqualTo(VehicleExtended.class.getName());
+        assertThat(carWithEngineMirror.getInheritanceHierarchyTypeNames().get(0)).isEqualTo(
+            VehicleExtended.class.getName());
         assertThat(carWithEngineMirror.getAllInterfaceTypeNames().size()).isEqualTo(0);
         assertThat(carWithEngineMirror.getInheritanceHierarchyTypeNames().size()).isEqualTo(4);
         var lengthCmPropOpt = carWithEngineMirror
@@ -1072,21 +1134,22 @@ public class ReflectiveDomainMirrorFactoryTest {
 
     @Test
     public void testExtendedEntity() throws NoSuchFieldException {
-        var conreteRootOpt = Domain.typeMirror(ConcreteRoot.class.getName()).map(r -> (AggregateRootMirror)r);
+        var conreteRootOpt = Domain.typeMirror(ConcreteRoot.class.getName()).map(r -> (AggregateRootMirror) r);
         assertThat(conreteRootOpt).isPresent();
         var conreteRootMirror = conreteRootOpt.get();
         assertThat(conreteRootMirror.getTypeName()).isEqualTo(ConcreteRoot.class.getName());
         assertThat(conreteRootMirror.getInheritanceHierarchyTypeNames().get(0)).isEqualTo(AbstractRoot.class.getName());
         assertThat(conreteRootMirror.getInheritanceHierarchyTypeNames().size()).isEqualTo(4);
         assertThat(conreteRootMirror.getIdentityField()).isPresent();
-        assertThat(conreteRootMirror.getIdentityField().get().getType().getTypeName()).isEqualTo(Identity.class.getName());
+        assertThat(conreteRootMirror.getIdentityField().get().getType().getTypeName()).isEqualTo(
+            Identity.class.getName());
     }
 
     //TODO Command getAggregatetarget
 
-    private void assertMethods(Class<?> clazz, List<MethodMirror> methodMirrors, List<ExpectedMethod> expectedMethods){
+    private void assertMethods(Class<?> clazz, List<MethodMirror> methodMirrors, List<ExpectedMethod> expectedMethods) {
         //assertThat(methodMirrors).hasSize(clazz.getMethods().length);
-        for(var expectedMeth : expectedMethods){
+        for (var expectedMeth : expectedMethods) {
             asserMethod(methodMirrors, expectedMeth);
         }
     }
@@ -1102,58 +1165,60 @@ public class ReflectiveDomainMirrorFactoryTest {
                                     List<String> processedCommands,
                                     List<String> inheritanceHierarchy
 
-    ){
+    ) {
         Optional<DomainObjectMirror> doMirrorOptional = Domain.typeMirror(expectedTypeFullQualifiedName);
         assertThat(doMirrorOptional).isPresent();
         var doMirror = doMirrorOptional.get();
         assertThat(doMirror.getInheritanceHierarchyTypeNames().get(0)).isEqualTo(expectedExtendsTypeFullQualifiedName);
         assertThat(doMirror.getBasicFields()).hasSize(expectedProperties.size());
         assertThat(doMirror.getValueReferences()).hasSize(expectedValueReferences.size());
-        if(expectedEntityReferences.size()>0){
+        if (expectedEntityReferences.size() > 0) {
             var entityMirror = (EntityMirror) doMirror;
             assertThat(entityMirror.getEntityReferences()).hasSize(expectedEntityReferences.size());
         }
-        for(var expectedProp : expectedProperties){
+        for (var expectedProp : expectedProperties) {
             assertProperty(doMirror, expectedProp);
         }
-        for(var expectedProp : expectedValueReferences){
+        for (var expectedProp : expectedValueReferences) {
             assertReference(doMirror, expectedProp);
         }
-        for(var expectedProp : expectedEntityReferences){
+        for (var expectedProp : expectedEntityReferences) {
             assertReference(doMirror, expectedProp);
         }
-        assertThat(doMirror.getInheritanceHierarchyTypeNames()).containsExactly(inheritanceHierarchy.toArray(String[]::new));
+        assertThat(doMirror.getInheritanceHierarchyTypeNames()).containsExactly(
+            inheritanceHierarchy.toArray(String[]::new));
 
-        if(doMirror instanceof EntityMirror){
+        if (doMirror instanceof EntityMirror) {
             var entityMirror = (EntityMirror) doMirror;
             var identityProperty = entityMirror.getIdentityField();
             assertThat(identityProperty).isPresent();
             assertThat(identityProperty.get().getName()).isEqualTo(identityPropertyName);
-            for (var event : listenedEvents){
-                var eventMirror = Domain.typeMirror(event).map(e-> (DomainEventMirror)e);
+            for (var event : listenedEvents) {
+                var eventMirror = Domain.typeMirror(event).map(e -> (DomainEventMirror) e);
                 assertThat(eventMirror).isPresent();
                 assertThat(entityMirror.listensTo(eventMirror.get())).isTrue();
             }
-            for (var event : publishedEvents){
-                var eventMirror = Domain.typeMirror(event).map(e-> (DomainEventMirror)e);
+            for (var event : publishedEvents) {
+                var eventMirror = Domain.typeMirror(event).map(e -> (DomainEventMirror) e);
                 assertThat(eventMirror).isPresent();
                 assertThat(entityMirror.publishes(eventMirror.get())).isTrue();
             }
-            for (var cmd : processedCommands){
-                var cmdMirror = Domain.typeMirror(cmd).map(c-> (DomainCommandMirror)c);
+            for (var cmd : processedCommands) {
+                var cmdMirror = Domain.typeMirror(cmd).map(c -> (DomainCommandMirror) c);
                 assertThat(cmdMirror).isPresent();
                 assertThat(entityMirror.processes(cmdMirror.get())).isTrue();
             }
         }
     }
 
-    private void assertProperty(DomainObjectMirror domainObjectMirror, ExpectedProperty expectedProperty){
+    private void assertProperty(DomainObjectMirror domainObjectMirror, ExpectedProperty expectedProperty) {
         var propertyMirrorOptional = domainObjectMirror
             .getBasicFields()
             .stream()
             .filter(p -> expectedProperty.name.equals(p.getName()))
             .findFirst();
-        assertThat(propertyMirrorOptional).describedAs(String.format("Expected Property with name '%s'", expectedProperty.name)).isPresent();
+        assertThat(propertyMirrorOptional).describedAs(
+            String.format("Expected Property with name '%s'", expectedProperty.name)).isPresent();
         var propertyMirror = propertyMirrorOptional.get();
         assertPropertyMirror(
             propertyMirror,
@@ -1166,24 +1231,27 @@ public class ReflectiveDomainMirrorFactoryTest {
             expectedProperty.containerAssertions);
     }
 
-    private void assertReference(DomainObjectMirror domainObjectMirror, ExpectedReference expectedReference){
+    private void assertReference(DomainObjectMirror domainObjectMirror, ExpectedReference expectedReference) {
         FieldMirror referenceMirror = null;
-        if(ValueObject.class.isAssignableFrom(expectedReference.type) || Enum.class.isAssignableFrom(expectedReference.type) || Identity.class.isAssignableFrom(expectedReference.type)){
+        if (ValueObject.class.isAssignableFrom(expectedReference.type) || Enum.class.isAssignableFrom(
+            expectedReference.type) || Identity.class.isAssignableFrom(expectedReference.type)) {
             var valueReferenceMirrorOptional = domainObjectMirror
                 .getValueReferences()
                 .stream()
                 .filter(p -> expectedReference.name.equals(p.getName()))
                 .findFirst();
-            assertThat(valueReferenceMirrorOptional).describedAs(String.format("Expected ValueObjectReference with name '%s'", expectedReference.name)).isPresent();
+            assertThat(valueReferenceMirrorOptional).describedAs(
+                String.format("Expected ValueObjectReference with name '%s'", expectedReference.name)).isPresent();
             referenceMirror = valueReferenceMirrorOptional.get();
-        } else if(Entity.class.isAssignableFrom(expectedReference.type)){
-            var entityMirror = (EntityMirror)domainObjectMirror;
+        } else if (Entity.class.isAssignableFrom(expectedReference.type)) {
+            var entityMirror = (EntityMirror) domainObjectMirror;
             var entityReferenceMirrorOptional = entityMirror
                 .getEntityReferences()
                 .stream()
                 .filter(p -> expectedReference.name.equals(p.getName()))
                 .findFirst();
-            assertThat(entityReferenceMirrorOptional).describedAs(String.format("Expected EntityReference with name '%s'", expectedReference.name)).isPresent();
+            assertThat(entityReferenceMirrorOptional).describedAs(
+                String.format("Expected EntityReference with name '%s'", expectedReference.name)).isPresent();
             referenceMirror = entityReferenceMirrorOptional.get();
         }
 
@@ -1197,11 +1265,11 @@ public class ReflectiveDomainMirrorFactoryTest {
             expectedReference.assertions,
             expectedReference.containerAssertions);
 
-        if(referenceMirror instanceof ValueReferenceMirror){
+        if (referenceMirror instanceof ValueReferenceMirror) {
             ValueReferenceMirror vrm = (ValueReferenceMirror) referenceMirror;
             assertThat(vrm.getValue()).isNotNull();
             assertThat(vrm.getType().hasCollectionContainer()).isEqualTo(expectedReference.isGroup);
-        } else if(referenceMirror instanceof EntityReferenceMirror){
+        } else if (referenceMirror instanceof EntityReferenceMirror) {
             EntityReferenceMirror erm = (EntityReferenceMirror) referenceMirror;
             assertThat(erm.getEntity()).isNotNull();
             assertThat(erm.getType().hasCollectionContainer()).isEqualTo(expectedReference.isGroup);
@@ -1215,16 +1283,26 @@ public class ReflectiveDomainMirrorFactoryTest {
                                       boolean expectedIsOptional,
                                       String expectedContainerType,
                                       List<ExpectedAssertion> expectedAssertions,
-                                      List<ExpectedAssertion> expectedContainerAssertions){
-        assertThat(propertyMirror.getName()).describedAs(String.format("Expected property name '%s'", expectedName)).isEqualTo(expectedName);
-        assertThat(propertyMirror.getType().getTypeName()).describedAs(String.format("Expected fullQualifiedTypeName '%s'", expectedName)).isEqualTo(expectedType.getName());
-        assertThat(propertyMirror.getType().getContainerTypeName()).describedAs(String.format("Expected containerType '%s'", expectedContainerType)).isEqualTo(Optional.ofNullable(expectedContainerType));
-        assertThat(propertyMirror.getType().hasOptionalContainer()).describedAs(String.format("Expected isOptional '%s'", expectedIsOptional)).isEqualTo(expectedIsOptional);
-        assertThat(propertyMirror.isModifiable()).describedAs(String.format("Expected isModifiable '%s'", expectedIsModifiable)).isEqualTo(expectedIsModifiable);
-        assertThat(propertyMirror.getType().getAssertions()).describedAs(String.format("Expected assertions size '%s'", expectedAssertions.size())).hasSize(expectedAssertions.size());
-        assertThat(propertyMirror.getType().getContainerAssertions()).describedAs(String.format("Expected container assertions size '%s'", expectedContainerAssertions.size())).hasSize(expectedContainerAssertions.size());
-        if(propertyMirror.getType().getAssertions().size()>0){
-            for(var ea : expectedAssertions){
+                                      List<ExpectedAssertion> expectedContainerAssertions) {
+        assertThat(propertyMirror.getName()).describedAs(
+            String.format("Expected property name '%s'", expectedName)).isEqualTo(expectedName);
+        assertThat(propertyMirror.getType().getTypeName()).describedAs(
+            String.format("Expected fullQualifiedTypeName '%s'", expectedName)).isEqualTo(expectedType.getName());
+        assertThat(propertyMirror.getType().getContainerTypeName()).describedAs(
+            String.format("Expected containerType '%s'", expectedContainerType)).isEqualTo(
+            Optional.ofNullable(expectedContainerType));
+        assertThat(propertyMirror.getType().hasOptionalContainer()).describedAs(
+            String.format("Expected isOptional '%s'", expectedIsOptional)).isEqualTo(expectedIsOptional);
+        assertThat(propertyMirror.isModifiable()).describedAs(
+            String.format("Expected isModifiable '%s'", expectedIsModifiable)).isEqualTo(expectedIsModifiable);
+        assertThat(propertyMirror.getType().getAssertions()).describedAs(
+            String.format("Expected assertions size '%s'", expectedAssertions.size())).hasSize(
+            expectedAssertions.size());
+        assertThat(propertyMirror.getType().getContainerAssertions()).describedAs(
+            String.format("Expected container assertions size '%s'", expectedContainerAssertions.size())).hasSize(
+            expectedContainerAssertions.size());
+        if (propertyMirror.getType().getAssertions().size() > 0) {
+            for (var ea : expectedAssertions) {
                 assertThat(
                     propertyMirror
                         .getType()
@@ -1232,111 +1310,153 @@ public class ReflectiveDomainMirrorFactoryTest {
                         .stream()
                         .filter(am ->
                             am.getAssertionType().equals(ea.type)
-                                && ((am.getParam1()== null && ea.param1==null) || am.getParam1().equals(ea.param1))
-                                && ((am.getParam2()== null && ea.param2==null) || am.getParam2().equals(ea.param2))
-                                && ((am.getMessage()== null && ea.message==null) || am.getMessage().equals(ea.message))
+                                && ((am.getParam1() == null && ea.param1 == null) || am.getParam1().equals(ea.param1))
+                                && ((am.getParam2() == null && ea.param2 == null) || am.getParam2().equals(ea.param2))
+                                && ((am.getMessage() == null && ea.message == null) || am.getMessage().equals(
+                                ea.message))
                         )
                         .findFirst()
-                ).describedAs(String.format("Expected assertion for property='%s' with type='%s', param1='%s', param2='%s', message='%s'", expectedName, ea.type, ea.param1, ea.param2, ea.message)).isPresent();
+                ).describedAs(String.format(
+                    "Expected assertion for property='%s' with type='%s', param1='%s', param2='%s', message='%s'",
+                    expectedName, ea.type, ea.param1, ea.param2, ea.message)).isPresent();
             }
         }
-        if(propertyMirror.getType().getContainerAssertions().size()>0){
-            for(var ea : expectedContainerAssertions){
+        if (propertyMirror.getType().getContainerAssertions().size() > 0) {
+            for (var ea : expectedContainerAssertions) {
                 assertThat(
                     propertyMirror
                         .getType().getContainerAssertions()
                         .stream()
                         .filter(am ->
                             am.getAssertionType().equals(ea.type)
-                                && ((am.getParam1()== null && ea.param1==null) || am.getParam1().equals(ea.param1))
-                                && ((am.getParam2()== null && ea.param2==null) || am.getParam2().equals(ea.param2))
-                                && ((am.getMessage()== null && ea.message==null) || am.getMessage().equals(ea.message))
+                                && ((am.getParam1() == null && ea.param1 == null) || am.getParam1().equals(ea.param1))
+                                && ((am.getParam2() == null && ea.param2 == null) || am.getParam2().equals(ea.param2))
+                                && ((am.getMessage() == null && ea.message == null) || am.getMessage().equals(
+                                ea.message))
                         )
                         .findFirst()
-                ).describedAs(String.format("Expected container assertion for property='%s' with type='%s', param1='%s', param2='%s', message='%s'", expectedName, ea.type, ea.param1, ea.param2, ea.message)).isPresent();
+                ).describedAs(String.format(
+                    "Expected container assertion for property='%s' with type='%s', param1='%s', param2='%s', " +
+                        "message='%s'",
+                    expectedName, ea.type, ea.param1, ea.param2, ea.message)).isPresent();
             }
         }
     }
 
-    private void asserMethod(List<MethodMirror> methodMirrors, ExpectedMethod method){
+    private void asserMethod(List<MethodMirror> methodMirrors, ExpectedMethod method) {
         var methodMirrorOpt = methodMirrors
             .stream()
             .filter(m -> m.getName().equals(method.name))
             .findFirst();
-        assertThat(methodMirrorOpt).describedAs(String.format("Expected Method with name '%s'", method.name)).isPresent();
+        assertThat(methodMirrorOpt).describedAs(
+            String.format("Expected Method with name '%s'", method.name)).isPresent();
         var methodMirror = methodMirrorOpt.get();
         assertThat(methodMirror.getName()).isEqualTo(method.name);
         assertThat(methodMirror.getDeclaredByTypeName()).isEqualTo(method.declaredByFullQualifiedName);
         assertThat(methodMirror.getAccessLevel()).isEqualTo(method.accessLevel);
-        assertThat(methodMirror.getParameters().size()).describedAs(String.format("%s method parameters expected", String.valueOf(method.parameters.size()))).isEqualTo(method.parameters.size());
-        if(methodMirror.getParameters().size()>0){
-            for(int i = 0; i<methodMirror.getParameters().size(); i++){
+        assertThat(methodMirror.getParameters().size()).describedAs(
+            String.format("%s method parameters expected", String.valueOf(method.parameters.size()))).isEqualTo(
+            method.parameters.size());
+        if (methodMirror.getParameters().size() > 0) {
+            for (int i = 0; i < methodMirror.getParameters().size(); i++) {
                 assertParam(methodMirror.getParameters().get(i), method.parameters.get(i));
             }
         }
         assertReturnValue(methodMirror.getReturnType(), method.returnType);
-        assertThat(methodMirror.getPublishedEvents().size()).describedAs(String.format("%s published event types expected", String.valueOf(method.publishedEventTypeNames.size()))).isEqualTo(method.publishedEventTypeNames.size());
-        if(methodMirror.getPublishedEvents().size()>0){
+        assertThat(methodMirror.getPublishedEvents().size()).describedAs(
+            String.format("%s published event types expected",
+                String.valueOf(method.publishedEventTypeNames.size()))).isEqualTo(
+            method.publishedEventTypeNames.size());
+        if (methodMirror.getPublishedEvents().size() > 0) {
             var eventNames = methodMirror.getPublishedEvents().stream()
                 .map(de -> de.getTypeName())
                 .collect(Collectors.toList())
                 .toArray(String[]::new);
-                assertThat(method.publishedEventTypeNames).containsExactly(eventNames);
+            assertThat(method.publishedEventTypeNames).containsExactly(eventNames);
         }
-        assertThat(methodMirror.getListenedEvent().map(e -> e.getTypeName())).isEqualTo(Optional.ofNullable(method.listenedEventTypeName));
+        assertThat(methodMirror.getListenedEvent().map(e -> e.getTypeName())).isEqualTo(
+            Optional.ofNullable(method.listenedEventTypeName));
     }
 
-    private void assertReturnValue(AssertedContainableTypeMirror returnMirror, ExpectedReturnType expectedReturnType){
-        assertThat(returnMirror.getTypeName()).describedAs(String.format("Expected fullQualifiedTypeName '%s'", expectedReturnType.expectedType().getName())).isEqualTo(expectedReturnType.expectedType().getName());
-        assertThat(returnMirror.getContainerTypeName()).describedAs(String.format("Expected containerType '%s'", expectedReturnType.containerTypeName)).isEqualTo(Optional.ofNullable(expectedReturnType.containerTypeName));
-        assertThat(returnMirror.hasOptionalContainer()).describedAs(String.format("Expected isOptional '%s'", expectedReturnType.optional)).isEqualTo(expectedReturnType.optional);
-        assertThat(returnMirror.hasCollectionContainer()).describedAs(String.format("Expected isGroup '%s'", expectedReturnType.isGroup)).isEqualTo(expectedReturnType.isGroup);
-        assertThat(returnMirror.getAssertions()).describedAs(String.format("Expected assertions size '%s'", expectedReturnType.assertions.size())).hasSize(expectedReturnType.assertions.size());
-        assertThat(returnMirror.getContainerAssertions()).describedAs(String.format("Expected container assertions size '%s'", expectedReturnType.containerAssertions.size())).hasSize(expectedReturnType.containerAssertions.size());
-        if(returnMirror.getAssertions().size()>0){
-            for(var ea : expectedReturnType.assertions){
+    private void assertReturnValue(AssertedContainableTypeMirror returnMirror, ExpectedReturnType expectedReturnType) {
+        assertThat(returnMirror.getTypeName()).describedAs(String.format("Expected fullQualifiedTypeName '%s'",
+            expectedReturnType.expectedType().getName())).isEqualTo(expectedReturnType.expectedType().getName());
+        assertThat(returnMirror.getContainerTypeName()).describedAs(
+            String.format("Expected containerType '%s'", expectedReturnType.containerTypeName)).isEqualTo(
+            Optional.ofNullable(expectedReturnType.containerTypeName));
+        assertThat(returnMirror.hasOptionalContainer()).describedAs(
+            String.format("Expected isOptional '%s'", expectedReturnType.optional)).isEqualTo(
+            expectedReturnType.optional);
+        assertThat(returnMirror.hasCollectionContainer()).describedAs(
+            String.format("Expected isGroup '%s'", expectedReturnType.isGroup)).isEqualTo(expectedReturnType.isGroup);
+        assertThat(returnMirror.getAssertions()).describedAs(
+            String.format("Expected assertions size '%s'", expectedReturnType.assertions.size())).hasSize(
+            expectedReturnType.assertions.size());
+        assertThat(returnMirror.getContainerAssertions()).describedAs(
+            String.format("Expected container assertions size '%s'",
+                expectedReturnType.containerAssertions.size())).hasSize(expectedReturnType.containerAssertions.size());
+        if (returnMirror.getAssertions().size() > 0) {
+            for (var ea : expectedReturnType.assertions) {
                 assertThat(
                     returnMirror
                         .getAssertions()
                         .stream()
                         .filter(am ->
                             am.getAssertionType().equals(ea.type)
-                                && ((am.getParam1()== null && ea.param1==null) || am.getParam1().equals(ea.param1))
-                                && ((am.getParam2()== null && ea.param2==null) || am.getParam2().equals(ea.param2))
-                                && ((am.getMessage()== null && ea.message==null) || am.getMessage().equals(ea.message))
+                                && ((am.getParam1() == null && ea.param1 == null) || am.getParam1().equals(ea.param1))
+                                && ((am.getParam2() == null && ea.param2 == null) || am.getParam2().equals(ea.param2))
+                                && ((am.getMessage() == null && ea.message == null) || am.getMessage().equals(
+                                ea.message))
                         )
                         .findFirst()
-                ).describedAs(String.format("Expected assertion for return type with type='%s', param1='%s', param2='%s', message='%s'", ea.type, ea.param1, ea.param2, ea.message)).isPresent();
+                ).describedAs(String.format(
+                    "Expected assertion for return type with type='%s', param1='%s', param2='%s', message='%s'",
+                    ea.type, ea.param1, ea.param2, ea.message)).isPresent();
             }
         }
-        if(returnMirror.getContainerAssertions().size()>0){
-            for(var ea : expectedReturnType.containerAssertions){
+        if (returnMirror.getContainerAssertions().size() > 0) {
+            for (var ea : expectedReturnType.containerAssertions) {
                 assertThat(
                     returnMirror.getContainerAssertions()
                         .stream()
                         .filter(am ->
                             am.getAssertionType().equals(ea.type)
-                                && ((am.getParam1()== null && ea.param1==null) || am.getParam1().equals(ea.param1))
-                                && ((am.getParam2()== null && ea.param2==null) || am.getParam2().equals(ea.param2))
-                                && ((am.getMessage()== null && ea.message==null) || am.getMessage().equals(ea.message))
+                                && ((am.getParam1() == null && ea.param1 == null) || am.getParam1().equals(ea.param1))
+                                && ((am.getParam2() == null && ea.param2 == null) || am.getParam2().equals(ea.param2))
+                                && ((am.getMessage() == null && ea.message == null) || am.getMessage().equals(
+                                ea.message))
                         )
                         .findFirst()
-                ).describedAs(String.format("Expected container assertion for return type with type='%s', param1='%s', param2='%s', message='%s'", ea.type, ea.param1, ea.param2, ea.message)).isPresent();
+                ).describedAs(String.format(
+                    "Expected container assertion for return type with type='%s', param1='%s', param2='%s', " +
+                        "message='%s'",
+                    ea.type, ea.param1, ea.param2, ea.message)).isPresent();
             }
         }
     }
 
-    private void assertParam(ParamMirror paramMirror, ExpectedParameter parameter){
+    private void assertParam(ParamMirror paramMirror, ExpectedParameter parameter) {
 
-        assertThat(paramMirror.getName()).describedAs(String.format("Expected parameter name '%s'", parameter.name)).isEqualTo(parameter.name);
-        assertThat(paramMirror.getType().getTypeName()).describedAs(String.format("Expected fullQualifiedTypeName '%s'", parameter.expectedType.getName())).isEqualTo(parameter.expectedType.getName());
-        assertThat(paramMirror.getType().getContainerTypeName()).describedAs(String.format("Expected containerType '%s'", parameter.containerTypeName)).isEqualTo(Optional.ofNullable(parameter.containerTypeName));
-        assertThat(paramMirror.getType().hasOptionalContainer()).describedAs(String.format("Expected isOptional '%s'", parameter.optional)).isEqualTo(parameter.optional);
-        assertThat(paramMirror.getType().hasCollectionContainer()).describedAs(String.format("Expected isGroup '%s'", parameter.isGroup)).isEqualTo(parameter.isGroup);
-        assertThat(paramMirror.getType().getAssertions()).describedAs(String.format("Expected assertions size '%s'", parameter.assertions.size())).hasSize(parameter.assertions.size());
-        assertThat(paramMirror.getType().getContainerAssertions()).describedAs(String.format("Expected container assertions size '%s'", parameter.containerAssertions.size())).hasSize(parameter.containerAssertions.size());
-        if(paramMirror.getType().getAssertions().size()>0){
-            for(var ea : parameter.assertions){
+        assertThat(paramMirror.getName()).describedAs(
+            String.format("Expected parameter name '%s'", parameter.name)).isEqualTo(parameter.name);
+        assertThat(paramMirror.getType().getTypeName()).describedAs(
+            String.format("Expected fullQualifiedTypeName '%s'", parameter.expectedType.getName())).isEqualTo(
+            parameter.expectedType.getName());
+        assertThat(paramMirror.getType().getContainerTypeName()).describedAs(
+            String.format("Expected containerType '%s'", parameter.containerTypeName)).isEqualTo(
+            Optional.ofNullable(parameter.containerTypeName));
+        assertThat(paramMirror.getType().hasOptionalContainer()).describedAs(
+            String.format("Expected isOptional '%s'", parameter.optional)).isEqualTo(parameter.optional);
+        assertThat(paramMirror.getType().hasCollectionContainer()).describedAs(
+            String.format("Expected isGroup '%s'", parameter.isGroup)).isEqualTo(parameter.isGroup);
+        assertThat(paramMirror.getType().getAssertions()).describedAs(
+            String.format("Expected assertions size '%s'", parameter.assertions.size())).hasSize(
+            parameter.assertions.size());
+        assertThat(paramMirror.getType().getContainerAssertions()).describedAs(
+            String.format("Expected container assertions size '%s'", parameter.containerAssertions.size())).hasSize(
+            parameter.containerAssertions.size());
+        if (paramMirror.getType().getAssertions().size() > 0) {
+            for (var ea : parameter.assertions) {
                 assertThat(
                     paramMirror
                         .getType()
@@ -1344,28 +1464,35 @@ public class ReflectiveDomainMirrorFactoryTest {
                         .stream()
                         .filter(am ->
                             am.getAssertionType().equals(ea.type)
-                                && ((am.getParam1()== null && ea.param1==null) || am.getParam1().equals(ea.param1))
-                                && ((am.getParam2()== null && ea.param2==null) || am.getParam2().equals(ea.param2))
-                                && ((am.getMessage()== null && ea.message==null) || am.getMessage().equals(ea.message))
+                                && ((am.getParam1() == null && ea.param1 == null) || am.getParam1().equals(ea.param1))
+                                && ((am.getParam2() == null && ea.param2 == null) || am.getParam2().equals(ea.param2))
+                                && ((am.getMessage() == null && ea.message == null) || am.getMessage().equals(
+                                ea.message))
                         )
                         .findFirst()
-                ).describedAs(String.format("Expected assertion for param='%s' with type='%s', param1='%s', param2='%s', message='%s'", parameter.expectedType.getName(), ea.type, ea.param1, ea.param2, ea.message)).isPresent();
+                ).describedAs(String.format(
+                    "Expected assertion for param='%s' with type='%s', param1='%s', param2='%s', message='%s'",
+                    parameter.expectedType.getName(), ea.type, ea.param1, ea.param2, ea.message)).isPresent();
             }
         }
-        if(paramMirror.getType().getContainerAssertions().size()>0){
-            for(var ea : parameter.containerAssertions){
+        if (paramMirror.getType().getContainerAssertions().size() > 0) {
+            for (var ea : parameter.containerAssertions) {
                 assertThat(
                     paramMirror
                         .getType().getContainerAssertions()
                         .stream()
                         .filter(am ->
                             am.getAssertionType().equals(ea.type)
-                                && ((am.getParam1()== null && ea.param1==null) || am.getParam1().equals(ea.param1))
-                                && ((am.getParam2()== null && ea.param2==null) || am.getParam2().equals(ea.param2))
-                                && ((am.getMessage()== null && ea.message==null) || am.getMessage().equals(ea.message))
+                                && ((am.getParam1() == null && ea.param1 == null) || am.getParam1().equals(ea.param1))
+                                && ((am.getParam2() == null && ea.param2 == null) || am.getParam2().equals(ea.param2))
+                                && ((am.getMessage() == null && ea.message == null) || am.getMessage().equals(
+                                ea.message))
                         )
                         .findFirst()
-                ).describedAs(String.format("Expected container assertion for param='%s' with type='%s', param1='%s', param2='%s', message='%s'", parameter.name, ea.type, ea.param1, ea.param2, ea.message)).isPresent();
+                ).describedAs(String.format(
+                    "Expected container assertion for param='%s' with type='%s', param1='%s', param2='%s', " +
+                        "message='%s'",
+                    parameter.name, ea.type, ea.param1, ea.param2, ea.message)).isPresent();
             }
         }
     }
@@ -1378,7 +1505,8 @@ public class ReflectiveDomainMirrorFactoryTest {
         boolean isStream,
         List<ExpectedAssertion> assertions,
         List<ExpectedAssertion> containerAssertions
-    ){}
+    ) {
+    }
 
     private record ExpectedParameter(String name,
                                      Class<?> expectedType,
@@ -1387,7 +1515,8 @@ public class ReflectiveDomainMirrorFactoryTest {
                                      boolean isGroup,
                                      List<ExpectedAssertion> assertions,
                                      List<ExpectedAssertion> containerAssertions
-                                     ){}
+    ) {
+    }
 
     private record ExpectedMethod(String name,
                                   String declaredByFullQualifiedName,
@@ -1395,7 +1524,8 @@ public class ReflectiveDomainMirrorFactoryTest {
                                   ExpectedReturnType returnType,
                                   List<ExpectedParameter> parameters,
                                   List<String> publishedEventTypeNames,
-                                  String listenedEventTypeName){}
+                                  String listenedEventTypeName) {
+    }
 
 
     private record ExpectedReference(Class<?> type,
@@ -1408,25 +1538,28 @@ public class ReflectiveDomainMirrorFactoryTest {
                                      boolean isPublicWriteable,
                                      String containerType,
                                      List<ExpectedAssertion> assertions,
-                                     List<ExpectedAssertion> containerAssertions) {}
+                                     List<ExpectedAssertion> containerAssertions) {
+    }
 
     private record ExpectedProperty(Class<?> type,
-                                 String name,
+                                    String name,
 
-                                 String declaredByFullQualifiedName,
-                                 boolean isModifiable,
-                                 boolean isOptional,
+                                    String declaredByFullQualifiedName,
+                                    boolean isModifiable,
+                                    boolean isOptional,
 
-                                 boolean isPublicReadable,
-                                 boolean isPublicWriteable,
-                                 String containerType,
-                                 List<ExpectedAssertion> assertions,
-                                 List<ExpectedAssertion> containerAssertions
-    ){}
+                                    boolean isPublicReadable,
+                                    boolean isPublicWriteable,
+                                    String containerType,
+                                    List<ExpectedAssertion> assertions,
+                                    List<ExpectedAssertion> containerAssertions
+    ) {
+    }
 
     private record ExpectedAssertion(AssertionType type,
                                      String param1,
                                      String param2,
-                                     String message){}
+                                     String message) {
+    }
 
 }
